# orestaty

./: Cargo.toml  README.md  flake.nix  test.html
example/: config.toml
example/plugins/: template.html
example/plugins/example/: example.scss  percent.rhai
example/src/: index.html  index.scss  page.md
src/: files.rs  lib.rs  main.rs
src/markdown/: mod.rs
src/page/: mod.rs
src/plugins/: highlighting.rs  mod.rs
src/plugins/syntax_highlighting/: mod.rs
src/sass/: mod.rs
src/templates/: index.md  markdown_template.html
test/src/: index.scss  page.md
