[package]
name = "orestaty"
version = "0.1.0"
edition = "2021"
authors = ["InfiniteCoder <info@infinitecoder.org>"]
description = "HTML-centered handlebars-based static site generator"
repository = "https://github.com/InfiniteCoder01/OreStaty/"
license = "MIT OR Apache-2.0"
keywords = ["markdown", "handlebars", "sass", "html"]
categories = [
    "command-line-utilities",
    "parser-implementations",
    "template-engine",
    "text-processing",
    "web-programming",
]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.14"

handlebars = { version = "5.1.2", features = ["script_helper"] }
serde = "1.0.203"
serde_json = "1.0.117"

grass = "0.13.3"
pulldown-cmark = "0.11.0"
serde_yml = "0.0.10"

