[package]
name = "orestaty"
version = "1.0.0"
edition = "2021"
authors = ["InfiniteCoder <info@infinitecoder.org>"]
description = "HTML-centered handlebars-based static site generator"
repository = "https://github.com/InfiniteCoder01/OreStaty/"
license = "MIT OR Apache-2.0"
keywords = ["markdown", "handlebars", "sass", "html"]
categories = [
	"command-line-utilities",
	"parser-implementations",
	"template-engine",
	"text-processing",
	"web-programming",
]

[features]
highlighting = ["dep:syntect", "dep:highlight-pulldown"]
default = ["highlighting"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

handlebars = { version = "5.1", features = ["script_helper"] }
serde = "1.0"
serde_json = "1.0"

grass = "0.13"
pulldown-cmark = "0.11"
serde_yml = "0.0"

syntect = { version = "5.1", optional = true }
highlight-pulldown = { git = "https://gitlab.com/InfiniteCoder01/highlight-pulldown.git", optional = true }
